--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -21,6 +21,14 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+  <%= form.label :image %>
+  <%= form.file_field :image %>
+  </div>
+
+
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
